--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calendar-app",
   "version": "1.0.0",
   "description": "A simple scheduler for classes",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Farhan9182/Calendar-Scheduler/issues"
   },
-  "homepage": "https://github.com/Farhan9182/Calendar-Scheduler#readme"
+  "homepage": "https://github.com/Farhan9182/Calendar-Scheduler#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
